--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "The Coorong Dynamics Model"
-author: "MR Hipsey, P Huang, D Paraska, S Zhai, B Busch, C Sims, M Gibbs"
+author: "MR Hipsey, P Huang, S Zhai, B Busch, D Paraska, C Sims"
 date: "`r format(Sys.time(), ' %d-%B-%Y')`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -28,16 +28,16 @@ Welcome to the **Coorong Dynamics Model** ($\mathbf{CDM}$) information pages!
 
 ## Project background {-}
 
-The Coorong is a unique coastal ecosystem that is important in supporting the local culture, economy, and environment, and is recognised globally by its Ramsar-listing. However, the state of the Coorong has degraded significantly over the past decade, primarily due to a reduction in freshwater flows and accumulation of nutrients and the resulting changes in water quality.
+The Coorong is a unique coastal ecosystem that is important in supporting the local culture, economy, and environment, and is recognised globally by its Ramsar-listing. However, the state of the Coorong has degraded significantly over the past decade, primarily due to a reduction in freshwater flows and accumulation of nutrients, and the resulting changes in water quality.
 
 To avoid further degradation and to help restore the ecosystem, the [Healthy Coorong Healthy Basin](https://www.environment.sa.gov.au/topics/coorong/healthy-coorong-healthy-basin) (HCHB) program was established by the Commonwealth and South Australian Governments in 2019. The HCHB Program supports a number of scientific trials, investigations and on-ground works to help restore the balance to the Coorong and identify long term solutions.
 
-As part of the HCHB program, the Coorong Dynamics Model (CDM) has been developed to gain insights in to the nutrient cycling the habitat changes within the Coorong ecosystem and to assist with  Coorong management and decision making. A previous version of the CDM has been developed and applied for assessing the environmental benefits of [Commonwealth Environmental Water](https://flow-mer.org.au/selected-area-lower-murray/) on the ecological habitat, and most recently the [Coorong Infrastructure Investigations Project](https://www.environment.sa.gov.au/topics/coorong/healthy-coorong-healthy-basin/coorong-infrastructure-investigations-project) (CIIP) to assess the environmental effect on water quality and habitat. Within the HCHB program, the key areas of the CDM development is to update core data inputs from other HCHB science investigations such as nutrient cycling studies and ecological habitats surveys, and to integrate these data with our best modelling tools to help improve the functional capability of the CDM in capturing the Coorong environmental conditions.
+As part of the HCHB program, the Coorong Dynamics Model (CDM) has been developed to gain insights in to the nutrient cycling and habitat changes within the Coorong ecosystem, and to assist with Coorong management and decision making. A previous version of the CDM has been developed and applied for assessing the environmental benefits of [Commonwealth Environmental Water](https://flow-mer.org.au/selected-area-lower-murray/) on the ecological habitat, and most recently the [Coorong Infrastructure Investigations Project](https://www.environment.sa.gov.au/topics/coorong/healthy-coorong-healthy-basin/coorong-infrastructure-investigations-project) (CIIP) to assess the environmental effect on water quality and habitat. Within the HCHB program, the key areas of the CDM development is to update core data inputs from other HCHB science investigations such as nutrient cycling studies and ecological habitats surveys, and to integrate these data with our best modelling tools to help improve the functional capability of the CDM in capturing the Coorong environmental conditions.
 
 This report documents the development of the CDM, including the data integration with our knowledge generation activities within the HCHB program. Improvements in the model functional capability, detailed validation tests, and assessment of the management and climate scenarios are reported here.
 
 
-## Report layout and guidance {-}
+## Document layout and guidance {-}
 
 This documentation is structured to allow a systematic description of the model rationale, model description and testing, and the finally results from the model in the context of assessing management options. The document starts with an introduction to the site and general model approach, including an overview opf previous modelling work in the Coorong and the research challenges and knowledge gaps that motivated the present work. The second chapter “*The Coorong Dynamics Model*” describes the details of the CDM platforms, configuration and the approach to data-model integration. The third chapter “*Model Development and Testing*” describes the model integration and development with other HCHB science projects. This is followed by the integrated assessment of the CDM (“*Integrated assessment of CDM*”) with the available Coorong data. Finally, the section “*Scenario testing and management*” reports the outcomes from our process of scenario assessment, which considers the nutrient management scenarios, flow variation scenarios, and climate change scenarios as informed by other HCHB analyses Lastly, the major conclusions and recommendations from the current project are provided.
 
@@ -54,14 +54,13 @@ The CDM manual has been developed by the following project team:
 -	Daniel Paraska ǂ
 -	Sherry Zhai ǂ
 - Claire Sims \*
-- Matt Gibbs \*
 
 ǂ Aquatic Ecodynamics, UWA School of Agriculture & Environment, The University of Western Australia, Crawley WA 6009, Australia.
 *
 
 ### Adding and updating content {.unnumbered}
 
-The intent of the CDM Manual is that the model - *and its documentation* - can continually be updated; thus the correction, improvement and addition of material is encouraged. This online book is therefore open-source and interested stakeholders can further develop content.
+The intent of the CDM Manual is that the model - *and its documentation* - can continually be updated; thus the correction, improvement and addition of material is encouraged. This online book is therefore open-source and interested stakeholders can comment, raise issues, and further develop content.
 
 The CDM documentation is available via GitHub and prepared in "R Mark Down" language. This is an implementation of mark down that can integrate with the R environment for enabling interactive content.
 
@@ -79,6 +78,13 @@ If you're unfamiliar with writing `.Rmd` and `.md` files, the [RStudio IDE 1.4](
 </center>
 
 <br>
+
+## Citing this document  {-}
+
+Please cite this online book in reports and scientific publications as: 
+
+Hipsey, M.R., Huang, P., Zhai, S., Busch, B.. Paraska, D., Sims, C., 2022. The Coorong Dynamics Model. Zenodo: DOI: 10.5281/zenodo.xxpendingxx.  
+
 <br>
 
 ```{r logo1, echo=FALSE, out.width='25%', class = "text-image"}
@@ -87,3 +93,4 @@ knitr::include_graphics(c("images/contributing/aed-transparent-background.png","
 ```
 
 <br>
+
