--- a/cdm_habitat_modelling.Rmd
+++ b/cdm_habitat_modelling.Rmd
@@ -342,7 +342,7 @@ knitr::include_graphics("images/lagoon_habitat/Gen2_HSI_sexual.png")
 
 To assess the accuracy of model predictions, the habitat suitability maps produced above were compared with *Ruppia* field survey results for both distribution and abundance, including several types of plant materials (e.g., shoot, seed, turion) which were used to validate HSI of different life-stages. In addition to a visual assessment, regression analyses were conducted in R studio between HSI values and *Ruppia* abundance for each life-stage over relevant periods. In general, this was done by overlaying *Ruppia* spatial data on HSI maps, creating a buffer around each sampling site, averaging HSI values in each model cell that fall within this buffer, and comparing with *Ruppia* abundance. 
 <br>
-The specific validation approach has evolved as the project progresses with more data becoming available, model updates implemented, and more insights revealed. For example, the strategies for pairing specific plant material recorded in the field with HSI output of a particular life-stage (e.g. seed abundance in Mar vs. HSI flowering in Sep the previous year) and its appropriate timing has initially been explored extensively. Table \@ref(tab:validversion) summarises the various major validation versions, including their data source, model version and methodology. Details of methods and results of the latest version ‘HCHB_longterm’, in which the Gen II model were implemented are described below. Details of assessments of previous versions and evolution of validation approaches are included in Appendices. <br>
+The specific validation approach has evolved as the project progresses with more data becoming available, model updates implemented, and more insights revealed. For example, the strategies for pairing specific plant material recorded in the field with HSI output of a particular life-stage (e.g. seed abundance in Mar vs. HSI flowering in Sep the previous year) and its appropriate timing has initially been explored extensively. Table \@ref(tab:validversion) summarises the various major validation versions, including their data source, model version and methodology. Details of methods and results of the latest version ‘HCHB_Gen II’, in which the Gen II model were implemented are described below. Details of assessments of previous versions and evolution of validation approaches are included in Appendices. <br>
 
 ```{r validversion, echo=FALSE, message=FALSE, warning=FALSE}
 theSheet <- read_excel('tables/habitat/AllTables.xlsx', sheet = 9)
@@ -359,6 +359,8 @@ kbl(theSheet[,1:9], caption = "Validation versions for the *Ruppia* model showin
 
 <br>
 
+#### HCHB Gen II validation {.unnumbered}
+<br>
 Ruppia survey data and associated model output used for the Gen II model assessment as well as validation metrics (correlation coefficients) are summarised in Table \@ref(tab:validpairs), and results described in following subsections. Overall, implementation of the *Ruppia* Gen II model has improved validation scores on most life-cycle phases, in particular field turion abundance versus modelled HSI for asexual reproduction due to a major update on the turion environmental threshold parameters. In most cases, model achieved a higher validation score in the south lagoon compared to the whole lagoon, which offers a higher confidence in assessing potential management options that are focused in the south. Model performance was significantly better in 2020 than in 2021 (for all validation pairs in the whole lagoon: average R = 0.4 in 2020 versus R = 0.11 in 2021). The lower scores in 2021 may be due to 1) an unusually cool and wet conditions experienced in the winter/spring 2021 that has delayed the *Ruppia* life cycle, particularly the flowering phase which may be triggered by rising temperature (Waycott 2020, pers.comm.), the threshold of which is currently unknown; 2) quantitative field surveys were conducted in Dec only in 2021 due to accessibility issues in extremely wet conditions prior to Dec,  instead of between Sep and Dec in 2020.
 
 ```{r validpairs, echo=FALSE, message=FALSE, warning=FALSE}
