--- a/appendix_c.Rmd
+++ b/appendix_c.Rmd
@@ -26,14 +26,14 @@ kbl(theSheet[,2:8], caption = "Habitat suitability functions for Ruppia life sta
   row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
   kable_styling(full_width = F,font_size = 10) %>%
-  column_spec(4, width = "7em")%>%
+  column_spec(2, width = "15em")%>%
   pack_rows("Turion viability (Jan 1 – Mar 31)", 1, 1) %>%
   pack_rows("Seed germination (Apr 1 – Jun 30)", 2, 6) %>%
   pack_rows("Turion sprouting (Apr 1 – Jun 30)", 7, 11) %>% #3rd and 4th row
   pack_rows("Adult plant growth (Jun 1 – Sep 30)", 12, 16) %>%
   pack_rows("Flowering and seed set (Sep 1 – Dec 31)", 17, 21) %>%
   pack_rows("Turion formation (Sep 1 – Dec 31)", 22, 26)%>%
-  scroll_box(width="150%",fixed_thead = T)
+  scroll_box(width = "700px", height = "4600px",fixed_thead = T)
 
   # column_spec(2, width = "12em")%>%
   # column_spec(4, width = "10em")%>%
