--- a/cdm_habitat_modelling.Rmd
+++ b/cdm_habitat_modelling.Rmd
@@ -121,7 +121,7 @@ kbl(theSheet[,2:6], caption = "Summary of environmental thresholds for *Ruppia* 
 
 <br>
 
-Statistical analyses were conducted on HCHB *Ruppia* survey data to investigate the influences of salinity and water depth on *Ruppia* abundance during 2020 -- 2021, in order to further refine environmental thresholds in the *Ruppia* model. This is because some of the optimal values presented in the literature prior to HCHB were thought to be possibly biased due to extreme environmental conditions in the Coorong during the survey (e.g. salinity thresholds for turion formation from Kim et al. 2015, pers. comm). Nonparametric multiplicative regressions (NPMR, McCune 2006) were used to derive optimal fit models describing the response of different life-stages of *Ruppia* to salinity and water depth in seasons appropriate for each life-stage. Salinity and water depth were found to be the most important abiotic factors influencing the distribution and abundance of *R.tuberosa* in previous studies (Kim et al. 2015). Although recent studies suggested that Distance from Murray Mouth (DFMM), elevation and algal biomass also influence macrophyte communities in the lagoon (Lewis et al. 2022), they are not included in this NPMR analysis as 1) the mechanisms underlying how DFMM influences macrophyte abundance is unclear; 2) elevation was recorded as a more permanent landmark which does not vary between seasons compared to water depth, however it is the actual water depth that influences the distribution of seagrass; 3) algae biomass is also influenced by salinity therefore co-correlation likely exists. The analysis was conducted in R using the 'ngnn' package and results are shown in (Figure \@ref(fig:NPMR-repro) and Figure \@ref(fig:NPMR-allperiod)) and Table \@ref(tab:NPMRresult) below. The abundance of *Ruppia* flower, seed and macrophyte shoot recorded during 2020 -- 2021 surveys in relation to salinity and water depth largely agreed with existing literature (Table \@ref(tab:threshold)). However, relatively high turion abundance was found to be in lower salinity conditions than previously recorded by Kim et al. 2015. During 2020 -- 2021, considerable number of turions occurred below salinity of 70 g/L down to approximately 45 g/L, especially when water depth \<0.4m (Figure \@ref(fig:NPMR-repro)), while Kim et al. (2015) suggested that turions were most likely to occur with salinity \>70 g/L. This finding was therefore incorporated into the turion formation thresholds in the habitat model (Table \@ref(tab:threshold)). <br>
+Statistical analyses were conducted on HCHB *Ruppia* survey data to investigate the influences of salinity and water depth on *Ruppia* abundance during 2020 -- 2021, in order to further refine environmental thresholds in the *Ruppia* model. This is because some of the optimal values presented in the literature prior to HCHB were thought to be possibly biased due to extreme environmental conditions in the Coorong during the survey (e.g. salinity thresholds for turion formation from Kim et al. 2015, pers. comm). Nonparametric multiplicative regressions (NPMR, McCune 2006) were used to derive optimal fit models describing the response of different life-stages of *Ruppia* to salinity and water depth in seasons appropriate for each life-stage. Salinity and water depth were found to be the most important abiotic factors influencing the distribution and abundance of *R. tuberosa* in previous studies (Kim et al. 2015). Although recent studies suggested that Distance from Murray Mouth (DFMM), elevation and algal biomass also influence macrophyte communities in the lagoon (Lewis et al. 2022), they are not included in this NPMR analysis as 1) the mechanisms underlying how DFMM influences macrophyte abundance is unclear; 2) elevation was recorded as a more permanent landmark which does not vary between seasons compared to water depth, however it is the actual water depth that influences the distribution of seagrass; 3) algae biomass is also influenced by salinity therefore co-correlation likely exists. The analysis was conducted in R using the 'ngnn' package and results are shown in (Figure \@ref(fig:NPMR-repro) and Figure \@ref(fig:NPMR-allperiod)) and Table \@ref(tab:NPMRresult) below. The abundance of *Ruppia* flower, seed and macrophyte shoot recorded during 2020 -- 2021 surveys in relation to salinity and water depth largely agreed with existing literature (Table \@ref(tab:threshold)). However, relatively high turion abundance was found to be in lower salinity conditions than previously recorded by Kim et al. 2015. During 2020 -- 2021, considerable number of turions occurred below salinity of 70 g/L down to approximately 45 g/L, especially when water depth \<0.4m (Figure \@ref(fig:NPMR-repro)), while Kim et al. (2015) suggested that turions were most likely to occur with salinity \>70 g/L. This finding was therefore incorporated into the turion formation thresholds in the habitat model (Table \@ref(tab:threshold)). <br>
 
 ```{r NPMR-repro, echo = FALSE, fig.show="hold", out.width='50%',  fig.align = "default", class = "text-image",  fig.cap = "Relationship between abundance of *Ruppia* flowers, turions, macroalgae and salinity (g/L) and water depth (m) during the *Ruppia* reproductive period (Sep – Dec 2020 and Dec 2021) in the Coorong."}
 
@@ -255,7 +255,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 ```{r threshold-0, echo=FALSE, message=FALSE, warning=FALSE}
 theSheet <- read_excel('tables/habitat/AllTables.xlsx', sheet = 7)
-kbl(theSheet[,1:6], caption = "Environmental thresholds for *Ruppia* life-stages based on past literature review and expert judgement.", align = "c",escape = F) %>%
+kbl(theSheet[,1:6], caption = "Environmental thresholds applied in the Gen 0 model for *Ruppia* life-stages based on past literature review and expert judgement.", align = "c",escape = F) %>%
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(bootstrap_options = "basic",full_width = T,font_size = 10)
 #  scroll_box(fixed_thead = FALSE)
@@ -314,7 +314,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 ```{r threshold-2, echo=FALSE, message=FALSE, warning=FALSE}
 theSheet <- read_excel('tables/habitat/AllTables.xlsx', sheet = 8)
-kbl(theSheet[,1:6], caption = "Environmental thresholds for *Ruppia* life-stages based on recent literature review, HCHB survey data and expert judgement. Refer to Section 8.1.3.1 and Appendix C for more details on each function and rationale.", align = "c",escape = F) %>%
+kbl(theSheet[,1:6], caption = "Environmental thresholds applied in the Gen II model for *Ruppia* life-stages based on recent literature review, HCHB survey data and expert judgement. Refer to Section 8.1.3.1 and Appendix C for more details on each function and rationale.", align = "c",escape = F) %>%
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(bootstrap_options = "basic",full_width = T,font_size = 10)
 #  scroll_box(fixed_thead = FALSE)
