--- a/cdm_macroalgae.Rmd
+++ b/cdm_macroalgae.Rmd
@@ -68,8 +68,8 @@ The algal biomass of each group, $PHY_C$, is simulated in units of carbon ($mmol
 
 ### Environmental threshold parameter review
 
-•	For salinities from 35—90 ppt, an optimum temperature for the Ulva paradoxa filamentous green algal community was 30°C, that is the temperature where the relationship between weight gain is the most positive (Waycott et al. 2019).
-•	At salinities of 30 - 140 ppt, weight change decreases as salinity increase. Salinities of more than 90 ppt were the most significant at reducing filamentous green algal growth rates. At a salinity of 140 ppt the growth of algae is inhibited at all temperatures (Waycott et al. 2019).
+•	For salinities from 35—90 ppt, an optimum temperature for the Ulva paradoxa filamentous green algal community was 30°C, that is the temperature where the relationship between weight gain is the most positive (Waycott et al. 2019).<br>
+•	At salinities of 30 - 140 ppt, weight change decreases as salinity increase. Salinities of more than 90 ppt were the most significant at reducing filamentous green algal growth rates. At a salinity of 140 ppt the growth of algae is inhibited at all temperatures (Waycott et al. 2019).<br>
 •	At salinities below 35 g/L, algal communities appear resilient to a wide range of temperatures and nutrient availability (Collier et al. 2017 cited in Asanopoulos and Waycott 2020).
 
 
