--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -164,10 +164,10 @@ library(knitr)
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
-theSheet_Names <- list.files(path = "HTML/Performance/MULTI/HTML", pattern = NULL, all.files = FALSE,
+theSheet_Names <- list.files(path = "HTML/Performance/MULT/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/MULTI/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+theSheet <- paste("<",'a href="HTML/Performance/MULT/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
 #theSheet <- append(theSheets,'Validation 2013 2016',0)
 
 kbl(theSheet, caption = "Comparison of Model Generations 1, 1.5 & 2", align = "l",escape = F,col.names = 'Model Comparison 2017 2022', ) %>%
@@ -184,11 +184,11 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 HCHB *Wave Comparisons*
 
 ```{r A-waveanalysis, echo=FALSE, message=FALSE, warning=FALSE}
-libratheSheet_Names <- list.files(path = "HTML/WAVES/HTML", pattern = NULL, all.files = FALSE,
+libratheSheet_Names <- list.files(path = "HTML/Performance/WAVE/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
 
-theSheet <- paste("<",'a href="HTML/WAVES/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+theSheet <- paste("<",'a href="HTML/Performance/WAVE/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
 
 
 
