--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -41,9 +41,9 @@ The calculations of statistical metrics was performed for each site where the nu
   <button class="tablinks" onclick="opentab(event, 'GEN0')"id="defaultOpen">GEN 0</button>
   <button class="tablinks" onclick="opentab(event, 'GEN1')">GEN 1</button>
   <button class="tablinks" onclick="opentab(event, 'GEN15')">GEN 1.5</button>
+  <button class="tablinks" onclick="opentab(event, 'GEN2')">GEN 2</button>
   <button class="tablinks" onclick="opentab(event, 'MULTI')">MULTI</button>
   <button class="tablinks" onclick="opentab(event, 'WAVE')">WAVE</button>
-   <button class="tablinks" onclick="opentab(event, 'GEN2')">GEN 2</button>
 </div>
 
 
@@ -159,7 +159,8 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 <p> 
 HCHB *Model Comparisons*
 
-```{r A-testing4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r A-testing5, echo=FALSE, message=FALSE, warning=FALSE}
+
 library(knitr)
 library(kableExtra)
 library(readxl)
@@ -183,17 +184,18 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 <p> 
 HCHB *Wave Comparisons*
 
-```{r A-waveanalysis, echo=FALSE, message=FALSE, warning=FALSE}
-libratheSheet_Names <- list.files(path = "HTML/Performance/WAVE/HTML", pattern = NULL, all.files = FALSE,
+```{r A-testing6, echo=FALSE, message=FALSE, warning=FALSE}
+  library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet_Names <- list.files(path = "HTML/Performance/WAVE/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-
 theSheet <- paste("<",'a href="HTML/Performance/WAVE/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
-
-
+#theSheet <- append(theSheets,'Validation 2013 2016',0)
 
 kbl(theSheet, caption = "Generation 1.5 Wave Analysis", align = "l",escape = F,col.names = 'Generation 1.5', ) %>%
-
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(full_width = T,font_size = 10) %>%
     scroll_box(fixed_thead = FALSE)
