--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -165,10 +165,10 @@ library(knitr)
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
-theSheet_Names <- list.files(path = "HTML/Performance/MULT", pattern = NULL, all.files = FALSE,
+theSheet_Names <- list.files(path = "HTML/Performance/MULT/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/MULT/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+theSheet <- paste("<",'a href="HTML/Performance/MULT/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
 #theSheet <- append(theSheets,'Validation 2013 2016',0)
 
 kbl(theSheet, caption = "Comparison of Model Generations 1, 1.5 & 2", align = "l",escape = F,col.names = 'Model Comparison 2017 2022', ) %>%
@@ -189,10 +189,10 @@ HCHB *Wave Comparisons*
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
-theSheet_Names <- list.files(path = "HTML/Performance/WAVE", pattern = NULL, all.files = FALSE,
+theSheet_Names <- list.files(path = "HTML/Performance/WAVE/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/WAVE/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+theSheet <- paste("<",'a href="HTML/Performance/WAVE/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
 #theSheet <- append(theSheets,'Validation 2013 2016',0)
 
 kbl(theSheet, caption = "Generation 1.5 Wave Analysis", align = "l",escape = F,col.names = 'Generation 1.5', ) %>%
